# gles2framework

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  clean.bat  gles2framework.sln  gles2framework.vcxproj  gles2framework.vcxproj.filters  glfw-notes.md  loc.sh  main.c  phystest.c  simple.c  sprites.c
examples/: chiptest.c  invaders.c  phystest.c  simple.c  sprites.c
include/: input.h  keys.h  obj.h  support.h
kazmath/kazmath/: aabb.c  mat4.c  quaternion.c  ray2.c
models/: alien.blend  cube.blend
obj2opengl/: OBJ.h  builder.c  clean.sh  cube.mtl  gbotest.c  makeGBO.sh  readme.txt
obj2opengl/blend/: ground.blend  shot.blend
resources/models/: alien.gbo  cube.gbo  ground.gbo  ship.gbo  shot.gbo  sphere.gbo
resources/shaders/: particle.frag  particle.vert  sprite.frag  sprite.vert  textured.frag
shaders/: glprint.frag  glprint.vert  textured.vert
src/: input.c  obj.c  support.c
src-models/: alien.c  alien.h  cube.c  cube.h  ship.c  ship.h  shot.c  shot.h
tools/fontexturer/: GridLayoutDemo.java  build.xml  readme.txt
tools/fontexturer/src/com/logiklabs/fontexturer/: FontCellRenderer.java  Fontexturer.java  PreviewPanel.java
tools/obj2opengl/: obj2opengl.pl  readme.txt
tools/obj2opengl/blend/: sphere.blend
